tests/tooling/fixtures/native/execution/negative/instancetype_return_nullability_suffix_unsupported.objc3
module InstancetypeReturnNullabilitySuffixUnsupported;

fn pick(flag: bool) -> bool? {
  if (flag) {
    return 1;
  }
  return 0;
}

fn main() -> i32 {
  if (pick(true) != 0) {
    return 1;
  }
  return 0;
}
